--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -61,6 +61,7 @@
   <div id="myname" hidden><%=myname%></div>
   <div id="mykey" hidden><%=mykey%></div>
   <div id="myavatar" hidden><%=myavatar%></div>
+  <div id="maxuser" hidden><%=maxuser%></div>
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="/images/loader.gif" height="100px" width="100px" alt="" srcset="">
@@ -76,7 +77,7 @@
     <div class="menuwrapper">
       <div class="chat__sidebar">
         <h3>#<span class="keyname1 key"></span></h3>
-        <div id="maxuser"><i class="fa-solid fa-user"></i> Max User:<%=maxuser%></div>
+        <div class="maxuser"><i class="fa-solid fa-user"></i> Max User:<%=maxuser%></div>
         <div class="users"></div>
       </div>
     </div>
@@ -84,7 +85,7 @@
       <div class="menuwrapper2">
         <div class="chat__sidebar">
           <h3>#<span class="keyname2 key"></span></h3>
-          <div id="maxuser"><i class="fa-solid fa-user"></i> Max User:<%=maxuser%></div>
+          <div class="maxuser"><i class="fa-solid fa-user"></i> Max User:<%=maxuser%></div>
           <div class="users"></div>
         </div>
       </div>
@@ -194,7 +195,7 @@
             <div class="main-image">
               <span class='time'>{{createdAt}}</span>
               <div class="imageMessage">{{{image}}}</div>
-              <img src="/images/sending-s.png" height="10px" width="10px" class="sent">
+              <i class="fa-regular fa-circle-check sent"></i>
             </div>
           </div>
         </li>
@@ -202,7 +203,7 @@
 
     </div>
   </div>
-  <script src="https://kit.fontawesome.com/0a4c75c9d0.js" crossorigin="anonymous"></script>
+  <script defer src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
