--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -71,7 +71,7 @@
     <div class="topbar">
       <div class="topbar-wrapper">
         <div class="menu"></div>
-        <div class="info">?</div>
+        <div class="info"><i class="fa-solid fa-ellipsis-vertical"></i></div>
       </div>
     </div>
     <div class="menuwrapper">
@@ -103,7 +103,7 @@
             <div class="toast-popup-name"></div>
             <div class="toast-popup-message"></div>
           </div>
-          <div class="toast-popup-close"><i class="fa-solid fa-circle-xmark"></i></div>
+          <div class="toast-popup-close"><i class="fa-solid fa-xmark"></i></div>
         </div>
         <div class="popup-message" style="display: none;"></div>
         <div class="chat__footer">
@@ -121,9 +121,17 @@
       </div>
       
       <div class="previewimage" style="display: none;">
-        <div class="previewimage__close"><i class="fa-solid fa-circle-xmark"></i></div>
+        <div class="previewimage__close"><i class="fa-solid fa-xmark"></i></div>
         <div class="previewimage__image"></div>
         <div class="sendimage"><i class="fa-solid fa-paper-plane"></i></div>
+      </div>
+
+      <div class="lightbox" style="display: none;">
+        <div class="tool">
+          <div class="lightbox__save"><i class="fa-solid fa-download"></i></div>
+          <div class="lightbox__close"><i class="fa-solid fa-xmark"></i></div>
+        </div>
+        <div class="lightbox__image"></div>
       </div>
     
       <template id="message-template" type="text/template">
