--- a/public/login.ejs
+++ b/public/login.ejs
@@ -167,7 +167,7 @@
     </fieldset>
     <div class="popup-message" style="display: none;"></div>
     <div class="footer">
-        <p>&copy; Copyright Fuad Hasan 2022. All rights reserved.</p>
+        <p>&copy; Copyright Fuad Hasan 2022. All rights reserved. v.4.0.2</p>
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
