--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -314,6 +314,18 @@ input[type=file] {
   color: var(--secondary);
 }
 
+.imageMessage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .imageMessage:hover, .textMessage:hover {
   cursor: pointer;
 }
