--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -82,14 +82,6 @@
       </div>
     </div>
     <div class="chat">
-      <div class="menuwrapper2">
-        <div class="chat__sidebar">
-          <h3>#<span class="keyname2 key"></span></h3>
-          <div class="maxuser"><i class="fa-solid fa-user"></i> Max User: <%=maxuser%></div>
-          <div class="users"></div>
-        </div>
-      </div>
-      
       <div class="chat__main">
         <ol id="messages" class="chat__messages">
           <div class="intro">
@@ -132,6 +124,14 @@
           <div class="lightbox__close"><i class="fa-solid fa-xmark"></i></div>
         </div>
         <div class="lightbox__image"></div>
+      </div>
+
+      <div class="about" style="display: none;">
+        <p style="font-size: 1.2rem;">Poketab Messanger</p>
+        <p>Developed by <a href="http://itsfuad.netlify.app">Fuad Hasan</a> 🐸</p>
+        <p>Avatars: <a href="https://flaticon.com">https://flaticon.com</a></p>
+        <p>Icons: <a href="http://fontawesome.com">Font Awesome</a></p>
+        <div class="close">Close</div>
       </div>
     
       <template id="message-template" type="text/template">
