--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -111,7 +111,9 @@
           </form>
         </div>
       </div>
-      
+      <div class="newmessagepopup" style="display: none;">
+        <img src="" alt=""><div class="msg"></div>
+      </div>
       <div class="previewimage" style="display: none;">
         <div class="previewimage__close"><i class="fa-solid fa-xmark"></i></div>
         <div class="previewimage__image"></div>
