--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1059,6 +1059,7 @@ input[type=file] {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  z-index: 99;
 }
 
 .about .close {
