--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -774,6 +774,7 @@ scrollbar-width: none;  /* Firefox */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 99;
   .close{
     color: orangered;
     position: absolute;
